gcc/testsuite/gcc.c-torture/compile/pr40556.c
@@ -1,0 +1,22 @@
+struct A {};
+
+struct A foo()
+{
+  return foo();
+}
+
+void bar()
+{
+  foo();
+}
+struct A {};
+
+struct A foo()
+{
+  return foo();
+}
+
+void bar()
+{
+  foo();
+}
